--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="scripts/scroll.js"></script>
+  <script src="scripts/sidenav.js"></script>
+  <script src="scripts/navlinks.js"></script>
 </head>
 
+<body>
   <header class="navigation">
     <img src="images/logo.svg" alt="logo" class="logo">
     <ul class="navigation-links">
@@ -96,14 +101,18 @@
 
   <section id="content-case-study" class="content-case-study">
     <div id="case1" class="case-study">
-      <img src="images/ebuddy.svg" alt="ebuddy" class="case-study-img">
-      <h3><span>eBuddy</span></h3>
+      <a href="ebuddy.html">
+        <img src="images/ebuddy.svg" alt="ebuddy" class="case-study-img">
+        <h3><span>eBuddy</span></h3>
+      </a>
       <p>Designing a social networking app to shorten the process of connecting people who share the same interests. </p>
     </div>
 
     <div id="case2" class="case-study">
-      <img src="images/DESE.svg" alt="DESE" class="case-study-img">
-      <h3><span>DESE</span></h3>
+     <a href="dese.html">
+        <img src="images/DESE.svg" alt="DESE" class="case-study-img">
+        <h3><span>DESE</span></h3>
+      </a>
       <p>Redesigning the navigation system and reorganising the presentation of existing information to reduce the cognitive load for users when interacting with the website. </p>
     </div>
 
@@ -185,14 +194,7 @@
   <footer>
     <p>© 2021 Aileen Xin.</p>
   </footer>
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="scripts/scroll.js"></script>
-  <script src="scripts/sidenav.js"></script>
-  <script src="scripts/navlinks.js"></script>
-  
  
-  
 </body>
 
 </html>
