--- a/ebuddy.html
+++ b/ebuddy.html
@@ -59,7 +59,9 @@
 </section>
 
 <section class="ebuddy-research">
-    <img src="images/ebuddy/ebuddy-research-img.svg" alt="ebuddy-research-img" class="ebuddy-research-img">
+    <h2 id="research-title">RESEARCH</h2>
+    <h1>User Research Outcomes</h1>
+    <br>
     <p>We conducted <strong>5 one-on-one semi-structured</strong> user interviews over Zoom and surveys on Google Forms and Facebook to acquire a broader range of responses. </p>
     <br>
     <p><strong>The key findings derived from the interviews and surveys:</strong></p>
@@ -92,7 +94,7 @@
 </section>
 
 <section class="ebuddy-definition">
-    <img src="images/ebuddy/ebuddy-definition-img.svg" alt="ebuddy-definition-img" class="ebuddy-definition-img">
+    <h2 id="definition-title">DEFINITION</h2>
     <h2>Problem Statement:</h2>
     <br>
     <p>ebuddy is designed to help mentally exhausted active social media users effectively and efficiently connect to people who share commonalities such as similar interests or passions with them since we have observed that people have spent a lot of time and effort struggling to search for specific interest matches online. </p>
@@ -108,7 +110,7 @@
 </section>
 
 <section class="ebuddy-ideation">
-    <img src="images/ebuddy/ebuddy-ideation-img.svg" alt="ebuddy-ideation-img" class="ebuddy-ideation-img">
+    <h2 id="ideation-title">IDEATION</h2>
     <h2>Storyboard:</h2>
     <br>
     <p>A storyboard was drawn to visualize a user’s journey when getting to use the eBuddy app. </p>
@@ -143,7 +145,7 @@
 </section>
 
 <section class="ebuddy-prototyping">
-    <img src="images/ebuddy/ebuddy-prototyping.svg" alt="ebuddy-prototyping-img" class="ebuddy-prototyping-img">
+    <h2 id="prototyping-title">PROTOTYPING</h2>
     <h2>Low Fidelity Wireframes:</h2>
     <br>
     <p>We created low-fidelity wireframes and prototypes using Adobe XD to brainstorm and test the initial design ideas.</p>
@@ -153,19 +155,19 @@
 </section>
 
 <section class="ebuddy-testing">
-    <img src="images/ebuddy/ebuddy-testing.svg" alt="ebuddy-testing-img" class="ebuddy-testing-img">
+    <h2 id="testing-title">TESTING</h2>
     <div class="ebuddy-usability-testing">
         <div class="ebuddy-usability-testing-text">
             <h2>Usability Testing</h2>
             <br>
-            <p>We created a test plan for users to complete consecutive tasks on the high-fidelity prototype. </p>
+            <p>We created a test plan for users to complete consecutive tasks on the low-fidelity prototype. </p>
             <br>
             <ul>
                 <li>- 5 users, 4 tasks. </li>
                 <li>- 100% success rate. </li>
             </ul>
             <br>
-            <p><strong>We gained following insights:</strong></p>
+            <p><strong>We gained the following insights:</strong></p>
             <ul>
                 <li>- Two participants struggled a bit to find the match button.</li>
                 <li>- One participant commented the heart icon did not signify if they are likes options for a specific feature or to match with someone.</li>
@@ -181,7 +183,7 @@
 </section>
 
 <section class="ebuddy-summary">
-    <img src="images/ebuddy/ebuddy-summary.svg" alt="ebuddy-summary-img" class="ebuddy-summary-img">
+    <h2 id="summary-title">SUMMARY</h2>
     <ul>
         <li>- Teamwork is the key to success. Since this project requires three teammates to work together and build a clickable mobile app prototype from the beginning, it is really important to communicate with teammates and distribute the workload based on each person’s speciality and availability. Bad teamwork will significantly affect the project progress and final outcomes.  </li>
         <br>
