--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,9 @@
 
 <body>
   <header class="navigation">
+    <a href="index.html">
     <img src="images/logo.svg" alt="logo" class="logo">
+    </a>
     <ul class="navigation-links">
       <li class='navigation-link'><a href="index.html">Home</a></li>
       <li class='navigation-link'><a href="about.html">About Me</a></li>
@@ -52,9 +54,9 @@
 
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="index.html">Home</a>
-    <a href="about.html">About Me</a>
-    <a href="contact.html">Contact</a>
+    <a href="index.html" class="navigation-link">Home</a>
+    <a href="about.html" class="navigation-link">About Me</a>
+    <a href="contact.html" class="navigation-link">Contact</a>
   </div>
 
   <section class="contact">
