--- a/dese.html
+++ b/dese.html
@@ -44,7 +44,9 @@
 
 <body>
   <header id="navigation" class="navigation">
+    <a href="index.html">
     <img src="images/logo.svg" alt="logo" class="logo">
+    </a>
     <ul class="navigation-links">
       <li class='navigation-link'><a href="index.html">Home</a></li>
       <li class='navigation-link'><a href="about.html">About Me</a></li>
@@ -55,9 +57,9 @@
 
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a class="navigation-link" href="index.html">Home</a>
-    <a class="navigation-link" href="about.html">About Me</a>
-    <a class="navigation-link" href="contact.html">Contact</a>
+    <a href="index.html" class="navigation-link">Home</a>
+    <a href="about.html" class="navigation-link">About Me</a>
+    <a href="contact.html" class="navigation-link">Contact</a>
   </div>
 
   <a href="#navigation"><img src="images/dese/chevron.svg" alt="chevron" class="dese-chevron"></a>
@@ -70,7 +72,7 @@
 </section>
 
 <section id="dese-about" class="dese-about">
-    <h2>About the Project:</h2>
+    <h2>About the Project</h2>
     <br>
     <p>The current Department of Education, Skills and Employment (DESE) site has some information architecture (IA) and user interface (UI) design issues where users feel mentally exhausted going through an overwhelming amount of information in the navigation bar and web pages to navigate themselves to the desired site page. The solution was to redesign the navigation system and reorganise the presentation of existing information to reduce the cognitive load for users when interacting with the website.</p>
         <br>
@@ -203,23 +205,15 @@
     </div>
 
     <div class="typography-text-demo">
-        <p id="poppins">Poppins</p>
         <div class="abc-poppins">
-            <p id="abc">AaBbCc</p>
-            <p>ABCDEFGHIJKLMNOPQRSTUVWXYZ
-                abcdefghijklmnopqrstuvwxyz
-                0123456789
-                ~%!@#$%^&*-_=+
-                 []{}()|\/‘’”,.;:?</p>
+            <p id="poppins">Poppins</p>
+            <p id="abc">AaBbCc123</p>
         </div>
-        <p id="open-sans">Open Sans</p>
+
+       
         <div class="abc-open-sans">
-            <p id="abc-1">AaBbCc</p>
-            <p>ABCDEFGHIJKLMNOPQRSTUVWXYZ
-                abcdefghijklmnopqrstuvwxyz
-                0123456789
-                ~%!@#$%^&*-_=+
-                 []{}()|\/‘’”,.;:?</p>
+            <p id="open-sans">Open Sans</p>
+            <p id="abc-1">AaBbCc123</p>
         </div>
     </div>
 
@@ -298,9 +292,14 @@
             </a>
         </div>
         
-        <div class="Native ARC">
-            <img src="images/Native ARC.svg" alt="Native ARC" class="Native-ARC-img">
-            <h3>Native ARC</h3>
+        <div class="Jade-Agencies">
+            <a href="jade.html">
+            <img src="images/Jade agencies.svg" alt="Jade Agencies" class="Jade-agencies-img">
+            </a>
+
+            <a href="jade.html">
+            <h3>Jade Agencies</h3>
+            </a>
         </div>
     </div>
 
