--- a/ebuddy.html
+++ b/ebuddy.html
@@ -40,7 +40,9 @@
 
 <body>
   <header id="navigation" class="navigation">
+    <a href="index.html">
     <img src="images/logo.svg" alt="logo" class="logo">
+    </a>
     <ul class="navigation-links">
       <li class='navigation-link'><a href="index.html">Home</a></li>
       <li class='navigation-link'><a href="about.html">About Me</a></li>
@@ -51,9 +53,9 @@
 
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a class="navigation-link" href="index.html">Home</a>
-    <a class="navigation-link" href="about.html">About Me</a>
-    <a class="navigation-link" href="contact.html">Contact</a>
+    <a href="index.html" class="navigation-link">Home</a>
+    <a href="about.html" class="navigation-link">About Me</a>
+    <a href="contact.html" class="navigation-link">Contact</a>
   </div>
 
 <a href="#navigation"><img src="images/ebuddy/chevron.svg" alt="chevron" class="ebuddy-chevron"></a>
@@ -66,7 +68,7 @@
 </section>
 
 <section id="ebuddy-about" class="ebuddy-about">
-    <h2>About the Project:</h2>
+    <h2>About the Project</h2>
     <br>
     <p>eBuddy is a social networking app that focuses on helping people who struggle to find the right person, to do the right thing, at the right time to establish genuine and meaningful social connections with others who share the same interests and passions with them from a virtual world to real life.</p>
         <br>
@@ -116,13 +118,13 @@
 
 <section class="ebuddy-definition">
     <h2 id="definition-title">DEFINITION</h2>
-    <h2>Problem Statement:</h2>
+    <h2>Problem Statement</h2>
     <br>
     <p>ebuddy is designed to help mentally exhausted active social media users effectively and efficiently connect to people who share commonalities such as similar interests or passions with them since we have observed that people have spent a lot of time and effort struggling to search for specific interest matches online. </p>
     <br>
     <p><strong>How might we shorten the process in connecting people who share similar interests, passions or goals so that they can save time and mental effort finding compatible connections online? </strong></p>
     <div class="ebuddy-user-persona">
-    <h2>User Persona:</h2>
+    <h2>User Persona</h2>
     <br>
     <p>Based on the research results, the main persona was identified:</p>
     <br>
@@ -132,7 +134,7 @@
 
 <section class="ebuddy-ideation">
     <h2 id="ideation-title">IDEATION</h2>
-    <h2>Storyboard:</h2>
+    <h2>Storyboard</h2>
     <br>
     <p>A storyboard was drawn to visualize a user’s journey when getting to use the eBuddy app. </p>
     <br>
@@ -167,7 +169,7 @@
 
 <section class="ebuddy-prototyping">
     <h2 id="prototyping-title">PROTOTYPING</h2>
-    <h2>Low Fidelity Wireframes:</h2>
+    <h2>Low Fidelity Wireframes</h2>
     <br>
     <p>We created low-fidelity wireframes and prototypes using Adobe XD to brainstorm and test the initial design ideas.</p>
     <div class="ebuddy-low-fidelity-container">
@@ -216,15 +218,25 @@
     <h2>Check Out More Below</h2>
     <div class="case-studies">
         <div class="DESE">
+            <a href="dese.html">
             <img src="images/DESE.svg" alt="DESE" class="DESE-img">
-            <h3>DESE</h3>>
+            </a>
+
+            <a href="dese.html">
+            <h3>DESE</h3>
+            </a>
         </div>
-        <div class="Native ARC">
-            <img src="images/Native ARC.svg" alt="Native ARC" class="Native-ARC-img">
-            <h3>Native ARC</h3>
+
+        <div class="Jade-Agencies">
+            <a href="jade.html">
+            <img src="images/Jade agencies.svg" alt="Jade Agencies" class="Jade-Agencies-img">
+            </a>
+            
+            <a href="jade.html">
+            <h3>Jade Agencies</h3>
+            </a>
         </div>
     </div>
-
 
     
 </section>
