--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 
 <body>
   <header class="navigation">
+    <a href="index.html">
     <img src="images/logo.svg" alt="logo" class="logo">
+    </a>
     <ul class="navigation-links">
       <li class='navigation-link'><a href="index.html">Home</a></li>
       <li class='navigation-link'><a href="about.html">About Me</a></li>
@@ -50,9 +52,9 @@
 
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="index.html">Home</a>
-    <a href="about.html">About Me</a>
-    <a href="contact.html">Contact</a>
+    <a href="index.html" class="navigation-link">Home</a>
+    <a href="about.html" class="navigation-link">About Me</a>
+    <a href="contact.html" class="navigation-link">Contact</a>
   </div>
 
   <section class="content">
@@ -133,9 +135,11 @@
     </div>
 
     <div id="case3" class="case-study">
-      <img src="images/Native ARC.svg" alt="Native ARC" class="case-study-img">
-      <h3><span>Native ARC</span></h3>
-      <p>Redesigning a responsive website so that visitors would feel more confident and willing to make donations and apply for volunteer roles to the organisation.</p>
+      <a href="jade.html">
+        <img src="images/Jade agencies.svg" alt="Jade Agencies" class="case-study-img">
+        <h3><span>Jade Agencies</span></h3>
+      </a>
+      <p>Renewing the website to showcase a combination of sleek modernity and Chinese cultural understanding while clearly providing all business information.</p>
     </div>
   </section>
 
