--- a/jade.html
+++ b/jade.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/sidenav.css">
-  <link rel="stylesheet" href="css/ebuddy.css">
+  <link rel="stylesheet" href="css/jade.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -81,7 +81,7 @@
     <p><strong>Tools:</strong>Adobe XD, Photoshop, Miro, Zoom</p>
 </section>
 
-<section class="ebuddy-research">
+<section class="jade-research">
     <h2 id="research-title">RESEARCH</h2>
     <h1>Usability testing - current site</h1>
     <br>
@@ -91,12 +91,16 @@
     <br>
     <ul>
         <li>- Many participants were suggesting although the website adopted a clean and minimalist style, the design was too simple and plain which fails to communicate a good sense of brand personality and differentiate from its competitors in the field. </li>
+        <br>
         <li>- Participants did not feel like the website was accommodating for a business audience since there was too little information on the website about their past work, business partners and clients.</li>
+        <br>
         <li>- Some user interface design issues communicated the wrong messages to participants. Such as the underlined texts look like links that can be clicked. </li>
+        <br>
     </ul>
 
     <div class="jade-competitor-analysis">
         <h2>Competitor Analysis</h2>
+        <br>
         <p>A competitor analysis was conducted to compare with both direct competitors and indirect competitors. Key competitive advantages of each organisation’s website were addressed below.</p>
         <div class="jade-competitor-analysis-text">
             <div class="silk-initiative">
@@ -116,7 +120,7 @@
                 <ul>
                     <li>- Great use of website animation and transition effects</li>
                     <li>- Fun colour palette levitates the website design</li>
-                    <li>- The customer review section makes their service appeal more reliable and professional</li>
+                    <li>- Customer reviews make their service appeal more reliable</li>
                 </ul>
             </div>
 
@@ -177,6 +181,7 @@
         <br>
         <p>Navigation bar hierarchy:</p>
         <img src="images/jade/jade-navigation-bar-hierarchy.svg" alt="jade-sitemap" class="jade-sitemap-img">
+        <br>
         <p>Footer hierarchy:</p>
         <img src="images/jade/jade-footer-hierarchy.svg" alt="jade-sitemap" class="jade-sitemap-img">   
     </div>
@@ -191,7 +196,7 @@
         <img src="images/jade/jade-low-fidelity-1.svg" alt="jade-low-fidelity" class="jade-low-fidelity">
         <img src="images/jade/jade-low-fidelity-2.svg" alt="jade-low-fidelity" class="jade-low-fidelity">
     </div>
-    <h2>High Fidelity Wireframes:</h2>
+    <h2 id="high-fidelity-wireframes">High Fidelity Wireframes:</h2>
     <br>
     <p>High fidelity wireframes incorporated the desired imagery, colour palette, typography and redesigned logo. </p>
     <div class="jade-high-fidelity-container">
@@ -229,14 +234,15 @@
     <img src="images/jade/jade-mockups.svg" alt="jade-mockups" class="jade-mockups">
 </section>
 
+<img src="images/jade/Jade-agencies.gif" alt="jade-agencies-gif" class="jade-agencies-gif">
 
 <section class="jade-summary">
     <h2 id="summary-title">SUMMARY</h2>
     <ul>
         <li>- Working with the stakeholder is a challenging but rewarding experience. It was valuable to communicate with a stakeholder and gain insights into an organisation’s value propositions, unique selling points and user attributes. Having a throughout understanding of the organisation facilitated the following design process and helped me create designs that best reflect the brand identity.  </li>
-        <br>
     </ul>
 </section>
+
 
 <section class="more-case-studies">
     <h2>Check Out More Below</h2>
@@ -250,9 +256,11 @@
             <h3>DESE</h3>
             </a>
         </div>
-        <div class="Native ARC">
+        <div class="ebuddy">
+            <a href="ebuddy.html">
             <img src="images/ebuddy.svg" alt="eBuddy" class="ebuddy-img">
             <h3>eBuddy</h3>
+            </a>
         </div>
     </div>    
 </section>
