--- a/jade.html
+++ b/jade.html
@@ -104,8 +104,10 @@
         <p>A competitor analysis was conducted to compare with both direct competitors and indirect competitors. Key competitive advantages of each organisation’s website were addressed below.</p>
         <div class="jade-competitor-analysis-text">
             <div class="silk-initiative">
-                <img src="images/jade/the Silk Initiative.svg" alt="silk initiative" class="silk-initiative">
+                <img src="images/jade/the Silk Initiative.svg" alt="silk initiative" class="silk-initiative-img">
+                <br>
                 <h3>The Silk Initiative</h3>
+                <br>
                 <ul>
                     <li>- Creative logo design</li>
                     <li>- Fun colour palette levitates the website design</li>
@@ -115,8 +117,10 @@
             </div>
 
             <div class="connectX">
-                <img src="images/jade/connectX.svg" alt="connectX" class="connectX">
+                <img src="images/jade/connectX.svg" alt="connectX" class="connectX-img">
+                <br>
                 <h3>ConnectX</h3>
+                <br>
                 <ul>
                     <li>- Great use of website animation and transition effects</li>
                     <li>- Fun colour palette levitates the website design</li>
@@ -125,8 +129,10 @@
             </div>
 
             <div class="bastion-collective">
-                <img src="images/jade/bastion collective.svg" alt="bastion collective" class="bastion collective">
+                <img src="images/jade/bastion collective.svg" alt="bastion collective" class="bastion-collective-img">
+                <br>
                 <h3>Bastion Collective</h3>
+                <br>
                 <ul>
                     <li>- A big and welcoming hero section</li>
                     <li>- Clear CTA buttons</li>
@@ -159,6 +165,7 @@
         <h2>Feature Prioritisation</h2>
         <br>
         <p>Potential features were developed using a ‘Mental Model’ technique and mapped out their possible value using a Feature Prioritisation map.</p>
+        <br>
         <img src="images/jade/jade-feature-prioritisation.svg" alt="jade-feature-prioritisation" class="feature-prioritisation-img">
     </div>
 
