--- a/dese.html
+++ b/dese.html
@@ -32,13 +32,13 @@
     </script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-22KR05ELQ9"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9DNZT0H7HR"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-22KR05ELQ9');
+    gtag('config', 'G-9DNZT0H7HR');
     </script>
 </head>
 
