--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     <div class="get-info">
       <h1>Get In Touch</h1>
       <div class="social-media">
-      <a href="#"><svg xmlns="http://www.w3.org/2000/svg" id="Component_35_1" data-name="Component 35 – 1" width="40" height="40" viewBox="0 0 40 40">
+      <a href="mailto:aileenxin28@gmail.com"><svg xmlns="http://www.w3.org/2000/svg" id="Component_35_1" data-name="Component 35 – 1" width="40" height="40" viewBox="0 0 40 40">
         <rect id="Rectangle_1146" data-name="Rectangle 1146" width="40" height="40"  opacity="0"/>
         <g id="ic_email_24px" transform="translate(0 4)">
           <path id="Path_447" data-name="Path 447" d="M38,4H6A4,4,0,0,0,2.02,8L2,32a4.012,4.012,0,0,0,4,4H38a4.012,4.012,0,0,0,4-4V8A4.012,4.012,0,0,0,38,4Zm0,8L22,22,6,12V8L22,18,38,8Z" transform="translate(-2 -4)"/>
