--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
   <section class="contact">
     <h1>Contact</h1>
     <p>If you’re at all interested in working with me, please do not hesitate to contact me.</p>
-    <form action="results.html" method="GET">
+    <form class="contact-form" action="contact-handler.php" method="post">
 
       <div class="name-container">
         <div class="label-container">
@@ -88,7 +88,7 @@
 
       <h5>*Required field</h5>
 
-     <button id="myBtn" type="submit" class="submit-button">Submit</button>
+     <button id="myBtn" type="submit" name="submit" class="submit-button">Submit</button>
     </form>
   </section>
 
