--- a/contact.html
+++ b/contact.html
@@ -62,8 +62,8 @@
   <section class="contact">
     <h1>Contact</h1>
     <p>If you’re at all interested in working with me, please do not hesitate to contact me.</p>
-    <form class="contact-form" action="contact-handler.php" method="post">
 
+    <form name="contact" class="contact-form" method="POST" data-netlify="true">
       <div class="name-container">
         <div class="label-container">
           <label for="first-name">First name*</label>
