--- a/contact.html
+++ b/contact.html
@@ -64,6 +64,7 @@
     <p>If you’re at all interested in working with me, please do not hesitate to contact me.</p>
 
     <form name="contact" class="contact-form" method="POST" data-netlify="true">
+      <input type="hidden" name="form-name" value="contact">
       <div class="name-container">
         <div class="label-container">
           <label for="first-name">First name*</label>
