--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
 <head>
   <meta charset="utf-8">
   <title>Aileen Xin's Portfolio</title>
+  <link rel="shortcut icon" type="image/jpg" href="images/logo.svg"/>
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
